# Sim_Message_Receiver

./: .gitignore  CMakeLists.txt  README.md  REVIEW_REPORT.md  sdkconfig.defaults
docs/: ESP32_SIM_MQTT_HA_Guide.md
docs/12，调试教程  必看资料/: 必看3 SIM900A 各功能指令 详细版.ppt
main/: CMakeLists.txt  app_common.h  health_logic.c  health_logic.h  health_monitor.c  health_monitor.h  idf_component.yml  main.c  pdu_decoder.c  pdu_decoder.h  sim_modem.c  sim_modem.h  wifi_mqtt.c  wifi_mqtt.h
orangepi_bridge/: README.md  heartbeat_monitor.py  live_smoke.py  requirements.txt  sms_to_telegram.py  test_bridge_integration.py  test_heartbeat_monitor.py
test/: CMakeLists.txt  test_health_logic.c  test_heartbeat_format.c  test_long_message.c  test_main.c  test_pdu_decoder.c  test_sms_assembly.c
test/mocks/: app_common.h  cJSON.h  config.h  esp_log.h  mqtt_client.h
test/unity/: unity.c  unity.h
